fix whitespace at bottom of feeds in chrome

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -681,6 +681,10 @@ body,
   text-align: center;
 }
 
+#analytics-data {
+  display: none;
+}
+
 @import "foundation_overrides";
 @import "users";
 @import "channels";
